# LocalTuna

./: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  Main.qml  README.md  Recommendations.qml  applocaltuna_qml_module_dir_map.qrc  applocaltuna_qmltyperegistrations.cpp  applocaltunaplugin_localtunaPlugin.cpp  applocaltunaplugin_localtunaPlugin_in.cpp  build.ninja  cmake_install.cmake  main.cpp  qmldir  qrc_resources.cpp  resources.qrc
